--- a/rede-social/src/App.css
+++ b/rede-social/src/App.css
@@ -1,4 +1,133 @@
 .App {
   text-align: center;
+  background: transparent;
+  
+
+   }
+
+.container{
+  display: inline-flex;
+  justify-content: space-between;
+  width: 100%;
+
+  
 }
+.header{
+  
+  width: 100%;
+  height: 50px;
+
+  background-color:  rgba(171 179 176 / 15%);
+  overflow: hidden;
+  backdrop-filter: blur(20px);
+  font-size: 20px;
+  font-weight: 500;
+  color: white;
+  box-shadow: -4px 7px 1px  rgba(0, 0, 0, 0.027);
+  
+ 
+
+}
+
+
+.esquerda{
+  
+  width: 20%;
+  margin: 10px;
+  margin-top: 50px;
+  height: 300px;
+  background-color:  rgba(171 179 176 / 15%);
+  overflow: hidden;
+  border-radius: 14px;
+  backdrop-filter: blur(20px);
+  font-size: 20px;
+  font-weight: 500;
+  color: white;
+  box-shadow: -4px 7px 1px  rgba(0, 0, 0, 0.178);
+
+  
+  
+}
+  
+
+.direita{
+  
+  width: 20%;
+  margin: 10px;
+  margin-top: 50px;
+  height: 300px;
+  font-size: 1.5em;
+  background-color:  rgba(171 179 176 / 15%);
+  overflow: hidden;
+  border-radius: 14px;
+  backdrop-filter: blur(20px);
+  font-size: 20px;
+  font-weight: 500;
+  color: white;
+  box-shadow: -4px 7px 1px  rgba(0, 0, 0, 0.178);
+ 
+  
+
+}
+
+.post{
+ 
+  width: 50%;
+  height: 100vh;
+  margin: 10px;
+  margin-top: 100px;
+  background-color:  rgba(171 179 176 / 15%);
+  overflow: hidden;
+  border-radius: 14px;
+  backdrop-filter: blur(20px);
+  font-size: 20px;
+  font-weight: 500;
+  color: white;
+  box-shadow: -4px 7px 1px  rgba(0, 0, 0, 0.178);
+ 
+}
+
+input{
+  
+  border-radius: 14px;
+  text-align: left;
+  margin: 12px;
+  background-image: linear-gradient(45deg, rgb(14, 7, 1)
+ 1%, rgb(71, 45, 5) 80%);
+  border: transparent;
+  height: 30px;
+  
+  padding-left: 5px;
+  color: rgba(255, 255, 255, 0.712);
+}
+
+.search{
+ margin-top: 5px;
+}
+
+.friend{
+  text-align: center;
+  font-size: 25px;
+  font-weight: 900;
+  margin: 10px;
+  margin-left: 15px;
+  color: white;
+  width: 150px;
+  background-image: linear-gradient(45deg, rgb(14, 7, 1)
+ 1%, rgb(71, 45, 5) 80%);
+ border-radius: 14px;
+ text-decoration: none;
+ 
+ 
+}
+.link{
+  text-decoration: none;
+  color: white;
+}
+  .divheader{
+    display: flex;
+    justify-content: space-between;
+  }
+  
+ 
 
