--- a/rede-social/src/index.css
+++ b/rede-social/src/index.css
@@ -1,13 +1,21 @@
 body {
+  
+  height: 100vh;
+ 
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ background-image: linear-gradient(45deg, rgb(14, 7, 1)
+ 1%, rgb(71, 45, 5) 80%);
+ background-attachment: fixed;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
