--- a/rede-social/src/App.css
+++ b/rede-social/src/App.css
@@ -1,3 +1,6 @@
+
+
+
 .App {
   text-align: center;
   background: transparent;
@@ -69,13 +72,62 @@
   
 
 }
+.caixa{
+  display: flex;
+}
+.preto{
+  height: 40px;
+  width: 50%;
+  background-color:  rgba(171 179 176 / 15%);
+  margin: auto;
+  margin-top: 10px;
+  z-index: 2;
+  
+}
+
+.branco{
+  height: 50px;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  margin: auto;
+  margin-top: 40px;
+  border-radius: 0px 0px 14px 14px;
+  z-index: 1;
+}
 
 .post{
+  padding-top: 10px;
+  display: flex;
+  padding-left: 10px;
+  
+
+}
+
+#iposte{
+  display: flex;
+  border-radius: 14px;
+  text-align: left;
+  margin: -9px;
+  margin-left: 5px;
+  width: 615px;
+  margin-right: 10px;
+   background-color: rgb(14, 7, 1);
+  border: transparent;
+  height: 45px;
+  padding-left: 5px;
+  color: rgba(255, 255, 255, 0.712);
+  border-radius: 14px 0px 14px 14px;
+  border: 0.5px solid rgba(255, 255, 255, 0.712);
+  
+
+}
+
+.feed{
  
   width: 50%;
   height: 100vh;
   margin: 10px;
-  margin-top: 100px;
+  margin-top: 60px;
   background-color:  rgba(171 179 176 / 15%);
   overflow: hidden;
   border-radius: 14px;
@@ -87,16 +139,15 @@
  
 }
 
-input{
+#isearch{
   
   border-radius: 14px;
   text-align: left;
-  margin: 12px;
-  background-image: linear-gradient(45deg, rgb(14, 7, 1)
- 1%, rgb(71, 45, 5) 80%);
+  margin: 6px;
+  margin-right: 10px;
+   background-color: rgb(14, 7, 1);
   border: transparent;
   height: 30px;
-  
   padding-left: 5px;
   color: rgba(255, 255, 255, 0.712);
 }
@@ -107,14 +158,13 @@ input{
 
 .friend{
   text-align: center;
-  font-size: 25px;
+  font-size: 35px;
   font-weight: 900;
-  margin: 10px;
+  margin: 5px;
   margin-left: 15px;
   color: white;
-  width: 150px;
-  background-image: linear-gradient(45deg, rgb(14, 7, 1)
- 1%, rgb(71, 45, 5) 80%);
+  width: 20%;
+  background-color: rgb(14, 7, 1);
  border-radius: 14px;
  text-decoration: none;
  
@@ -127,7 +177,46 @@ input{
   .divheader{
     display: flex;
     justify-content: space-between;
+    
   }
+  
+ 
+
+   .divhome{
+    width: 40px;
+    height: 35px;
+    padding-top: 5px;
+    background-color: rgb(14, 7, 1);
+    margin-top: 6px;
+    border-radius: 20px;
+    box-sizing: border-box;
+    margin-left: -260px;
+   
+  
+  }
+  .divvideo{
+    width: 40px;
+    height: 35px;
+    padding-top: 5px;
+    background-color: rgb(14, 7, 1);
+    margin-top: 6px;
+    border-radius: 20px;
+    box-sizing: border-box;
+    margin-left: -260px;
+    
+  }
+.divmarket{
+  width: 40px;
+    height: 35px;
+    padding-top: 5px;
+    background-color: rgb(14, 7, 1);
+    margin-top: 6px;
+    border-radius: 20px;
+    box-sizing: border-box;
+    
+    
+}
+  
   
  
 
