--- a/rede-social/src/index.css
+++ b/rede-social/src/index.css
@@ -8,8 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- background-image: linear-gradient(45deg, rgb(14, 7, 1)
- 1%, rgb(71, 45, 5) 80%);
+  background-color: rgb(14, 7, 1);
  background-attachment: fixed;
   
 }
