--- a/rede-social/src/App.css
+++ b/rede-social/src/App.css
@@ -1,4 +1,7 @@
-
+:root{
+ --fundo: rgb(14, 7, 1);
+ --gray: rgba(171 179 176 / 15%);
+}
 
 
 .App {
@@ -15,12 +18,16 @@
 
   
 }
+.footer{
+  background-color: var(--gray);
+  height: 100px;
+}
 .header{
   
   width: 100%;
   height: 50px;
 
-  background-color:  rgba(171 179 176 / 15%);
+  background-color: var(--gray);
   overflow: hidden;
   backdrop-filter: blur(20px);
   font-size: 20px;
@@ -39,7 +46,7 @@
   margin: 10px;
   margin-top: 50px;
   height: 300px;
-  background-color:  rgba(171 179 176 / 15%);
+  background-color: var(--gray);
   overflow: hidden;
   border-radius: 14px;
   backdrop-filter: blur(20px);
@@ -60,7 +67,7 @@
   margin-top: 50px;
   height: 300px;
   font-size: 1.5em;
-  background-color:  rgba(171 179 176 / 15%);
+  background-color: var(--gray);
   overflow: hidden;
   border-radius: 14px;
   backdrop-filter: blur(20px);
@@ -78,7 +85,7 @@
 .preto{
   height: 40px;
   width: 50%;
-  background-color:  rgba(171 179 176 / 15%);
+  background-color: var(--gray);
   margin: auto;
   margin-top: 10px;
   z-index: 2;
@@ -111,7 +118,7 @@
   margin-left: 5px;
   width: 615px;
   margin-right: 10px;
-   background-color: rgb(14, 7, 1);
+   background-color: var(--fundo);
   border: transparent;
   height: 45px;
   padding-left: 5px;
@@ -128,7 +135,7 @@
   height: 100vh;
   margin: 10px;
   margin-top: 60px;
-  background-color:  rgba(171 179 176 / 15%);
+  background-color:  var(--gray);
   overflow: hidden;
   border-radius: 14px;
   backdrop-filter: blur(20px);
@@ -145,7 +152,7 @@
   text-align: left;
   margin: 6px;
   margin-right: 10px;
-   background-color: rgb(14, 7, 1);
+   background-color: var(--fundo);
   border: transparent;
   height: 30px;
   padding-left: 5px;
@@ -164,7 +171,7 @@
   margin-left: 15px;
   color: white;
   width: 20%;
-  background-color: rgb(14, 7, 1);
+  background-color: var(--fundo);
  border-radius: 14px;
  text-decoration: none;
  
@@ -186,7 +193,7 @@
     width: 40px;
     height: 35px;
     padding-top: 5px;
-    background-color: rgb(14, 7, 1);
+    background-color: var(--fundo);
     margin-top: 6px;
     border-radius: 20px;
     box-sizing: border-box;
@@ -198,7 +205,7 @@
     width: 40px;
     height: 35px;
     padding-top: 5px;
-    background-color: rgb(14, 7, 1);
+    background-color: var(--fundo);
     margin-top: 6px;
     border-radius: 20px;
     box-sizing: border-box;
@@ -209,14 +216,31 @@
   width: 40px;
     height: 35px;
     padding-top: 5px;
-    background-color: rgb(14, 7, 1);
+    background-color: var(--fundo);
     margin-top: 6px;
     border-radius: 20px;
     box-sizing: border-box;
     
     
 }
-  
+.divmarket:hover{
+  color:  var(--fundo);
+  background-color: white;
+  cursor: pointer;
+}
+.divhome:hover{
+  color: var(--fundo);
+  background-color: white;
+  cursor: pointer;
+}
+.divvideo:hover{
+  color:  var(--fundo);
+  background-color: white;
+  cursor: pointer;
+}
+.perfil{
+ font-size: 50px;
+}
   
  
 
