--- a/rede-social/src/App.css
+++ b/rede-social/src/App.css
@@ -39,6 +39,11 @@
 
 }
 
+.icones{
+  display: flex;
+  justify-content: space-around;
+}
+
 
 .esquerda{
   
@@ -112,19 +117,18 @@
 
 #iposte{
   display: flex;
-  border-radius: 14px;
   text-align: left;
   margin: -9px;
   margin-left: 5px;
-  width: 615px;
-  margin-right: 10px;
-   background-color: var(--fundo);
-  border: transparent;
+  width:calc(100% - 50px);
+
+  background-color: var(--fundo);
   height: 45px;
   padding-left: 5px;
   color: rgba(255, 255, 255, 0.712);
   border-radius: 14px 0px 14px 14px;
   border: 0.5px solid rgba(255, 255, 255, 0.712);
+  
   
 
 }
@@ -164,26 +168,33 @@
 }
 
 .friend{
-  text-align: center;
-  font-size: 35px;
-  font-weight: 900;
-  margin: 5px;
-  margin-left: 15px;
-  color: white;
   width: 20%;
   background-color: var(--fundo);
- border-radius: 14px;
- text-decoration: none;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+   justify-content: center;
+  border-radius: 14px;
+  padding-bottom: 10px;
+
+  
+
  
  
 }
 .link{
+  font-size: 30px;
+  font-weight: 900; 
   text-decoration: none;
   color: white;
+  
+  
+  
 }
   .divheader{
     display: flex;
     justify-content: space-between;
+    width: 100%;
     
   }
   
