--- a/rede-social/src/components/Esquerda.module.css
+++ b/rede-social/src/components/Esquerda.module.css
@@ -2,15 +2,19 @@
     background-color: transparent;
     border: none;
     color: rgb(255, 255, 255);
-    padding: -10px;
+    padding-right: 20px;
+    
+
     
 }
 option{
     color: black;
+    text-align: justify;
+   
     
 }
-
-.menu{
-    display: block;
+.seta{
+    margin-left: -15px;
+    
 }
 
