--- a/rede-social/src/App.css
+++ b/rede-social/src/App.css
@@ -23,17 +23,18 @@
   height: 100px;
 }
 .header{
-  
+  overflow: hidden;
   width: 100%;
   height: 50px;
-
+  display: flex;
   background-color: var(--gray);
-  overflow: hidden;
   backdrop-filter: blur(20px);
   font-size: 20px;
   font-weight: 500;
   color: white;
   box-shadow: -4px 7px 1px  rgba(0, 0, 0, 0.027);
+  justify-content: space-between;
+  align-items: center;
   
  
 
@@ -41,7 +42,12 @@
 
 .icones{
   display: flex;
-  justify-content: space-around;
+  justify-content:space-around ;
+  align-items: center;
+  
+  
+ 
+
 }
 
 
@@ -52,14 +58,13 @@
   margin-top: 50px;
   height: 300px;
   background-color: var(--gray);
-  overflow: hidden;
   border-radius: 14px;
-  backdrop-filter: blur(20px);
   font-size: 20px;
   font-weight: 500;
   color: white;
   box-shadow: -4px 7px 1px  rgba(0, 0, 0, 0.178);
-
+  backdrop-filter: blur(20px);
+  overflow: hidden;
   
   
 }
@@ -93,7 +98,7 @@
   background-color: var(--gray);
   margin: auto;
   margin-top: 10px;
-  z-index: 2;
+  display: flex;
   
 }
 
@@ -104,54 +109,17 @@
   margin: auto;
   margin-top: 40px;
   border-radius: 0px 0px 14px 14px;
-  z-index: 1;
-}
-
-.post{
-  padding-top: 10px;
-  display: flex;
-  padding-left: 10px;
   
-
 }
 
-#iposte{
-  display: flex;
-  text-align: left;
-  margin: -9px;
-  margin-left: 5px;
-  width:calc(100% - 50px);
 
-  background-color: var(--fundo);
-  height: 45px;
-  padding-left: 5px;
-  color: rgba(255, 255, 255, 0.712);
-  border-radius: 14px 0px 14px 14px;
-  border: 0.5px solid rgba(255, 255, 255, 0.712);
-  
-  
 
-}
 
-.feed{
- 
-  width: 50%;
-  height: 100vh;
-  margin: 10px;
-  margin-top: 60px;
-  background-color:  var(--gray);
-  overflow: hidden;
-  border-radius: 14px;
-  backdrop-filter: blur(20px);
-  font-size: 20px;
-  font-weight: 500;
-  color: white;
-  box-shadow: -4px 7px 1px  rgba(0, 0, 0, 0.178);
- 
-}
+
+
 
 #isearch{
-  
+  min-width: 100px;
   border-radius: 14px;
   text-align: left;
   margin: 6px;
@@ -161,21 +129,29 @@
   height: 30px;
   padding-left: 5px;
   color: rgba(255, 255, 255, 0.712);
+  font-size: calc(2px + 0.6em);
+  
 }
 
 .search{
  margin-top: 5px;
+ text-align: right;
+ font-size: calc(0.3em + 1vw);
+ 
 }
 
 .friend{
   width: 20%;
+  height: 45px;
   background-color: var(--fundo);
   margin-left: 10px;
-  display: flex;
-  align-items: center;
-   justify-content: center;
   border-radius: 14px;
-  padding-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  
+  
 
   
 
@@ -183,21 +159,17 @@
  
 }
 .link{
-  font-size: 30px;
+  font-size: 3.2vw;
   font-weight: 900; 
   text-decoration: none;
   color: white;
   
   
   
-}
-  .divheader{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    
-  }
   
+  
+  
+}
  
 
    .divhome{
@@ -208,7 +180,11 @@
     margin-top: 6px;
     border-radius: 20px;
     box-sizing: border-box;
-    margin-left: -260px;
+    margin-left: 10px;
+    margin-right: 10px;
+    
+    
+    
    
   
   }
@@ -220,11 +196,11 @@
     margin-top: 6px;
     border-radius: 20px;
     box-sizing: border-box;
-    margin-left: -260px;
+    
     
   }
 .divmarket{
-  width: 40px;
+    width: 40px;
     height: 35px;
     padding-top: 5px;
     background-color: var(--fundo);
@@ -252,6 +228,4 @@
 .perfil{
  font-size: 50px;
 }
-  
  
-
